# ingest_demo

./: .gitignore  README.md
ingest_demo/: README.md  pyproject.toml
ingest_demo/data/: mock_transactions.csv
ingest_demo/src/ingest_demo/: config.py  constants.py  generic_methods.py  logger.py  main.py
