[project]
name = "ingest-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Ruiz",email = "joseruiz.l@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "datetime (>=6.0,<7.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "cryptography (>=46.0.4,<47.0.0)",
]

[tool.poetry]
packages = [{include = "ingest_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
